# WiDF-Manager

./: .gitignore  CMakeLists.txt  README.md  log.txt  sdkconfig.defaults
components/widf_mngr/: Bottom_portal.html  CMakeLists.txt  Kconfig  idf_component.yml  widf_mngr_dns.c  widf_mngr_dns.h  widf_mngr_handlers.c  widf_mngr_handlers.h  widf_mngr_main.c
components/widf_mngr/examples/basic/: CMakeLists.txt  README.md  partitions.csv
components/widf_mngr/examples/basic/main/: main.c
components/widf_mngr/examples/custom_config/: CMakeLists.txt  README.md
components/widf_mngr/examples/custom_config/main/: CMakeLists.txt  main.c
components/widf_mngr/examples/event_callbacks/: CMakeLists.txt  README.md
components/widf_mngr/examples/event_callbacks/main/: main.c
components/widf_mngr/include/: widf_mngr.h
main/: CMakeLists.txt  Kconfig.projbuild  Top_portal.html  main.c  widf_mngr.h  widf_mngr_handlers.c  widf_mngr_handlers.h  widf_mngr_main.c
